--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <h1>Nicholas Costa</h1>
     <h2>Web Developer and Coder</h2>
     <hr class="divider">
-    <a href="https://github.com/BrainiacMainiac"><div class="githubicon"><img src="githubicon.png" class="githubicon"/></div></a>
-    <a href="https://plus.google.com/u/0/101797151506742319363/"><div class="googleplusicon"><img src="googleplusicon.gif" class="googleplusicon"/></div></a>
-    <a href="mailto:nicholas.philpott.costa@gmail.com"><div class="mailicon"><img src="mailicon.gif" class="mailicon"/></div></a>
+    <ul class="icons">
+        <a href="https://github.com/BrainiacMainiac"><li class="githubicon"><img src="githubicon.png" class="githubicon"/></li></a>
+        <a href="https://plus.google.com/u/0/101797151506742319363/"><li class="googleplusicon"><img src="googleplusicon.gif" class="googleplusicon"/></li></a>
+        <a href="mailto:nicholas.philpott.costa@gmail.com"><li class="mailicon"><img src="mailicon.gif" class="mailicon"/></li></a>
+    </ul>
 </body>
 </html>
