--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -1,1 +1,13 @@
+<!--
+  This is just an experiment I made on my free time to test some
+  JS things. It generates a set of tabs which can change the 
+  content of an image frame. This isn't very complex, but I'm not
+  great at JS, so this is good practice for me.
+  Authored by: Nicholas
+  P.S. Don't try to use this code. It's inelegant, and you can learn
+  from it, but you can't use it with other code. Bad things will happen.
+-->
 <!DOCTYPE html>
+<html>
+  
+</html>
