Finished head tag

--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -9,5 +9,10 @@
 -->
 <!DOCTYPE html>
 <html>
-  
+<head>
+  <title>Tabs Experiment</title>
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="style.css"/>
+  <script src="script.js"></script>
+</head>
 </html>
