--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nicholas Costan</title>
+    <title>Nicholas Costa</title>
     <meta charset="utf-8"/>
     <meta name="keywords" content="web developer, nicholas, costa, nicholas costa, coder"/>
     <meta name="author" content="Nicholas Costa"/>
