--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -4,7 +4,7 @@
   content of an image frame. This isn't very complex, but I'm not
   great at JS, so this is good practice for me.
   Authored by: Nicholas
-  P.S. Don't try to use this code. It's inelegant, and you can learn
+  P.S. Don't try to use this code. It's functional, and you can learn
   from it, but you can't use it with other code. Bad things will happen.
 -->
 <!DOCTYPE html>
@@ -12,7 +12,17 @@
 <head>
   <title>Tabs Experiment</title>
   <meta charset="UTF-8"/>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
 </head>
+<body>
+    <div class="frame" id="frame"></div>
+    <ul class="tabs">
+        <li class="1" id="1"></li>
+        <li class="2" id="2"></li>
+        <li class="3" id="3"></li>
+        <li class="4" id="4"></li>
+        <li class="5" id="5"></li>
+    </ul>
+</body>
 </html>
