--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -16,7 +16,9 @@
   <script src="script.js"></script>
 </head>
 <body>
-    <div class="frame" id="frame"></div>
+    <div class="frame" id="frame">
+    <img class="pictures" id="pictures" src="" />
+    </div>
     <ul class="tabs">
         <li class="1" id="1"></li>
         <li class="2" id="2"></li>
