--- a/Simple Calculator/index.html
+++ b/Simple Calculator/index.html
@@ -11,7 +11,7 @@ By: Nicholas Costa
 
     <body onload="setInterval(function(){upDate()}, 1)">
         <script type="text/javascript" src="Script.js"></script>
-        <a href="Framework.html">
+        <a href="index.html">
             <div id="header" onclick="hide()">
                  <h1 id="date">SOMETHINGWENTWRONG</h1>
             </div>
