Please enable JavaScript to take full advantage of this webpage.

--- a/Simple Calculator/index.html
+++ b/Simple Calculator/index.html
@@ -13,7 +13,7 @@ By: Nicholas Costa
         <script type="text/javascript" src="Script.js"></script>
         <a href="index.html">
             <div id="header" onclick="hide()">
-                 <h1 id="date">SOMETHINGWENTWRONG</h1>
+                 <h1 id="date">Please enable JavaScript to take full advantage of this webpage.</h1>
             </div>
         </a>
         <button id="revealButton" onclick="reveal()">A button</button>
