--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <!--
   This is just an experiment I made on my free time to test some
   JS things. It generates a set of tabs which can change the 
@@ -7,7 +8,6 @@
   P.S. Don't try to use this code. It's functional, and you can learn
   from it, but you can't use it with other code. Bad things will happen.
 -->
-<!DOCTYPE html>
 <html>
 <head>
   <title>Tabs Experiment</title>
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="frame" id="frame">
-    <img class="pictures" id="pictures" src="" />
+    <img class="pictures" id="pictures" src="img1.jpg" />
     </div>
     <ul class="tabs">
         <li class="1" id="1"></li>
