--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -10,7 +10,7 @@
 -->
 <html>
 <head>
-  <title>Tabs Experiment</title>
+  <title>Space Pictures</title>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
