--- a/Tabs Experiment/tabs.html
+++ b/Tabs Experiment/tabs.html
@@ -14,6 +14,40 @@
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
+  <style>
+li {
+  list-style: none;
+}
+body {
+    background-color: black;
+}
+.frame {
+    width: 720px;
+    height: 540px;
+    margin: 0px auto;
+    border: 3px white solid;
+    display: block;
+}
+.pictures {
+    width: 720px;
+    height: 540px;
+}
+.tabs li {
+    margin-left: 0px;
+    margin-right: 0px;
+    height: 50px;
+    width: 50px;
+    display: inline-block;
+    background-color: #41a841;
+    border-radius: 100%;
+}
+.tabs {
+    width: 270px;
+    display: block;
+    margin: 30px auto;
+    padding: 0px;
+}
+  </style>
 </head>
 <body>
     <div class="frame" id="frame">
