--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 </head>
 <body>
 <h1>Hello.</h1>
-<h2>There's nothing to see here, so move along to either <a href="http://brainiacmainiac.github.io/experiments/Tabs Experiment/index.html">Calculator</a> or <a href="http://brainiacmainiac.github.io/experiments/Simple Calculator/index.html">Tabs</a>.
+<h2>There's nothing to see here, so move along to either <a href="http://brainiacmainiac.github.io/experiments/Tabs Experiment/tabs.html">Tabs</a> or <a href="http://brainiacmainiac.github.io/experiments/Simple Calculator/index.html">Calculator</a>.
 </html>
